@@ -1,5 +1,9 @@
 2008-11-05  Jakub Jelinek  <jakub@redhat.com>
 
+	PR middle-end/37858
+	* passes.c (execute_one_pass): Don't look at cfun->curr_properties
+	for ipa and simple ipa passes.
+
 	PR middle-end/37870
 	* expmed.c (extract_bit_field_1): If int_mode_for_mode returns
 	BLKmode for non-memory, convert using a wider MODE_INT mode
